--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["ramsir3 <ramsir3@gmail.com>"]
 
 [dependencies]
-piston_window = "0.84.0"
+piston_window = "0.85.0"
+piston-button_tracker = "0.7.0"
