--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "open_platform_fighter"
 version = "0.1.0"
 authors = ["ramsir3 <ramsir3@gmail.com>"]
+# build = "build.rs" 
 
 [dependencies]
 piston_window = "0.85.0"
-piston-button_tracker = "0.7.0"
+enum-display-derive = "0.1.0"
+
+# [build-dependencies]
+# inflections = "1.1.1"
